welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:10: error: ';' expected but ')' found.
      avance()})
               ^